# transcription-shell

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  PACKAGING.md  README-DOCKER.md  README.md  build-docker.sh  docker-compose.yml  docker-run.sh  pyproject.toml
.cursor/rules/: no-sudo-lab-server.mdc
.github/workflows/: ci.yml
.tdad/workflows/: root.workflow.json
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  MODELS.md  TDAD_DESIGN_REVIEW.md  abbreviation-expansion.md  abbreviation-preservation.md  architecture.md  claude.md  claude_anthropic_reference.md  claude_openai_reference.md  decisions.md  glyph-machina-automation.md  ground-truth-calibration.md  ground-truth-human-annotation.md  gt_conventions.md  gui-cleanup-and-rerun.md  institutional-books-training.md  latin-documents-training-data.md  local-setup.md  log-lines-xml-text-line-count.md  mask-lineation-plugin.md  model-goals.md  plan.md  progress.md  recovery-batch.md  red_team_review.md  simple-workflow.md  tesseract-pre1800-training.md  tool-redesign.md
examples/latin_lineation_mvp/: README.md  pyproject.toml
examples/latin_lineation_mvp/src/latin_lineation_mvp/: __init__.py  benchmark.py  dataset.py  infer.py  model.py  train.py
examples/latin_lineation_stub/: README.md  pyproject.toml
examples/latin_lineation_stub/src/latin_lineation_stub/: __init__.py  infer.py
fixtures/: ground_truth_page.example.xml  prompt.example.yaml
ground_truth/: README.md
ground_truth/diplomatic/: README.md
jobs/posner_p4_fixed/: manifest.json
jobs/posner_p4_humanist/: manifest.json
jobs/posner_p4_ocr/: manifest.json
references/: computus-manuscript-map.md  computus.bib
references/computus-library/: README.md  manifest.json
scripts/: akdeniz_r3_cleanup_launch.sh  alto_to_pagexml.py  benchmark_gm_parity.py  blind_test_targets.yaml  blind_test_training_plan.py  bridges_autostart.sh  bridges_chain_htr_tail.sh  bridges_export_kraken_checkpoint.sh  bridges_fetch_institutional_books.sbatch  bridges_fetch_institutional_books_ia.sbatch  bridges_fix_kraken_numpy.sh  bridges_kraken_activate.sh  bridges_latin_corpus_prep.sh  bridges_post_training.sh  bridges_prep_core.sbatch  bridges_prep_env.sh  bridges_prep_full.sbatch  bridges_prep_login.sh  bridges_quickstart.sh  bridges_restart_htr.sh  bridges_resubmit_htr.sh  bridges_resubmit_training.sh  bridges_resume_r6_r7.sh  bridges_resume_r8.sh  bridges_ssh.sh  bridges_start.sh  bridges_submit_when_ready.sh  bridges_train_tesseract_pre1800.sbatch  bridges_training_automation_check.sh  bridges_training_automation_remediate.sh  bridges_training_continuity.sh  bridges_watch_pull.sh  build_latin_ngram_lm.sh  build_weakness_manifest.py  check_anthropic_key.py  check_version.py  clone-latin-documents.sh  comma_acquire.sh  comma_filter.py  comma_go_check.sh  (+75 more)
scripts/computus/: _acquire_plan.py  acquire_library.sh  crawl_citca_catalogue.py
scripts/latin_ms/: best_model.sh  convert_images.py  env.example  htr_postrun_compare.sh  mask_illustrations.py  patch_kraken_segtrain.sh  prompt_anglicana_legal.yaml  prompt_anglicana_legal_diplomatic.yaml  prompt_charter.yaml  prompt_charter_expanded.yaml  prompt_computus.yaml  prompt_ecclesiastical.yaml  prompt_english_copperplate.yaml  prompt_german_fraktur.yaml  prompt_italian_humanist.yaml  prompt_latin.yaml  prompt_medieval_french.yaml  prompt_middle_english.yaml  prompt_modern_print.yaml  prompt_secretary.yaml  run_pipeline.sh  s0_convert.sh  s0_retrain.sh  s1_acquire.sh  s2_crop.sh  s3_lineate.sh  s5_expand.sh  (+7 more)
tests/: test_alto_to_pagexml.py  test_anthropic_adapter.py  test_api.py  test_baseline_align.py  test_batch.py  test_batch_retry.py  test_check_anthropic_key_script.py  test_check_version_script.py  test_comma_normalize.py  test_config.py  test_doc_type_apply.py  test_env_persist.py  test_expand_bridge.py  test_glyph_machina_wait.py  test_gm_browser_install.py  test_gui_discovery.py  test_gui_smoke.py  test_gui_state.py  test_htr_selector.py  test_latin_benchmark.py  test_latin_lineation_mvp.py  test_latin_pipeline_plugins.py  test_lineation_backends.py  test_lines_compare.py  test_llm_http_client.py  test_model_catalog.py  test_pagexml_lines.py  test_pipeline_integration.py  test_prepare_tesseract_ocr_corpus.py  test_print_ocr_presets.py  test_prompt_normalization.py  test_tesseract_finetune.py  test_transcription_paths.py  test_trocr_selector.py  test_validate_gt_pagexml.py  test_validate_normalize.py  test_xml_tools.py
(+182 files in other folders)
